# Philosophers

./: CMakeLists.txt  README.md  a.out  main.c  philo.h
includes/: philo.h  philo_bonus.h
philo/: CMakeLists.txt  Makefile  actions.c  end_program.c  init_forks_and_philo_struct.c  main.c  parsing.c  philo  time.c  utilit.c
philo_bonus/: CMakeLists.txt  Makefile  actions.c  end_program.c  ft_itoa.c  init_forks_and_philo_struct.c  main.c  parsing.c  philo_bonus  philo_bonus.h  time.c  write_msg.c
